# test

./: .env.example  .gitignore  README.md
backend/: app.py  config.py  pyproject.toml  test_config.py
backend/alembic/: env.py
backend/alembic/versions/: 7abab4152c4e_add_character_metadata_and_user_goals.py  8bc0d66d369e_initial_migration.py
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/models/: __init__.py  attempt.py  character.py  character_metadata.py  keystroke.py  user.py  user_goal.py
backend/app/routers/: attempts.py  auth.py  goals.py  health.py  words.py
backend/app/schemas/: attempt.py  auth.py  goal.py  word.py
backend/app/services/: attempt_service.py  auth_service.py  character_service.py  goal_service.py
backend/data/: DEPRECATED.txt  words.json
backend/migrations/: init_db.sql
backend/models/: __init__.py  character.py  typing_attempt.py  user.py
backend/routes/: attempts.py  auth.py  health.py  history.py  words.py
backend/scripts/: seed_character_metadata.py  seed_shuangpin.py
backend/services/: attempt_service.py  auth_service.py  character_service.py  db_service.py  history_service.py  word_service.py
frontend/: index-redesign.html  index.html  login.html  package-lock.json  package.json
frontend/js/: main-redesign.js  main.js
frontend/js/modules/: animations.js  api.js  auth-backend.js  auth.js  auth.js.deprecated  history.js  (+7 more)
frontend/src/: App.tsx  main.tsx
frontend/styles/: animations.css  keyboard-redesign.css  keyboard.css  login.css  main.css  particles.css  practice.css  redesign.css  stats-panel.css  styles.css
tests/: HISTORY_FEATURE_TEST_CHECKLIST.md  INTEGRATION_TEST_CHECKLIST.md
tests/backend/: README.md  run_tests.sh  test_api.py  test_history_api.py  test_history_service.py
tests/frontend/: test-history.html  test.html
(+96 files in other folders)
